# ninfo

./: pyproject.toml
ninfo/: __init__.py
tests/: test_ninfo.py  test_util.py
